just some small fixes to wide screen monitors and also changed the scrollbar, old one looked way too basic

--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -5,6 +5,9 @@ html {
   background-color: $backgroundColor;
   color: $mainTextColor;
   font-family: $font-stack;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  @include scrollbar
 }
 
 * {
@@ -60,7 +63,8 @@ nav {
 
 
 video{
-  width: 100%;
+  width: 100vw;
+  
  
 }
 
@@ -176,7 +180,8 @@ video{
 
     .card__detailed--top {
       .card__detailed--image {
-        width: 100%;
+        width: 22.9vw;
+        
       }
     }
   }
@@ -190,10 +195,7 @@ video{
   width: 100vw;
   height: fit-content;
 
-  .card__wrapper{
-    
-    
-  }
+ 
 
 
   .arrowRight{
@@ -208,7 +210,7 @@ video{
 
   .arrowLeft{
     @extend .arrowRight;
-    left: 1%;
+    left: 1.6%;
     display: none;
   }
  
@@ -237,7 +239,7 @@ z-index: 98;
 
 .modal{
 @include absolutecenter;
-width:  clamp(400px, 40vw, 700px);
+width:  clamp(400px, 40vw, 1000px);
 height: clamp(400px, 80vh, 700px);
 background-color: $card;
 position: fixed;
@@ -245,23 +247,7 @@ z-index: 99;
  overflow-x: auto;
  border-radius: 10px;
 
- &::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #ff0101;
-}
-
-&::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #ff0101;
-}
-
-&::-webkit-scrollbar-thumb
-{
-	background-color: #000000;
-	border: 2px solid #000000;
-}
+ @include scrollbar;
  
 
 .modal__text{
@@ -316,6 +302,7 @@ span{
 .video__wrapper{
   position: absolute;
   z-index: -1;
+ 
 
 
 .video__wrapper--text{
