--- a/src/SASS/_variables&functions.scss
+++ b/src/SASS/_variables&functions.scss
@@ -75,3 +75,24 @@ $font-stack: 'Source Sans Pro', sans-serif;
         transform: scale(1.1);
     }
 }
+
+@mixin scrollbar{
+    
+ &::-webkit-scrollbar-track
+ {
+     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+     background-color: black;
+ }
+ 
+ &::-webkit-scrollbar
+ {
+     width: 10px;
+     background-color: black;
+ }
+ 
+ &::-webkit-scrollbar-thumb
+ {
+     background-color: #ff0101;
+     border: 2px solid #ff0101;
+ }
+}
